--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,21 @@
 <h1>User List</h1>
-	<%= link_to("Create User", users_new_path, :method => "get") %>
-	<table class="table table-striped">
+	<form>
+	    <div>
+	        <input id="search" type="search" placeholder="Search" />
+	    </div>
+	</form>
+	<div class="table-pager">Show
+	    <select class="pagesize">
+	        <option selected="selected" value="20">20</option>
+	        <option value="50">50</option>
+	    </select>entries | <span class="pagedisplay"></span> |
+	    <button type="button" class="btn prev">&larr;</button>
+	    <button type="button" class="btn next">&rarr;</button>
+	</div>
+	<table class="tablesorter-blue " id="myTable">
 		<thead>
 			<tr>
-			   <th>Email</th>
+			   <th>Email </th>
 			   <th>Delete</th>
 			   <th>Edit</th>
 			   <th>Admin?</th>
@@ -12,7 +24,7 @@
 		<tbody>
 			<%for user in @users %>
 				<tr>
-				    <td><%=user.email%></td>
+				    <td class="email"><%=user.email%></td>
 				    <td><%= link_to "Delete User", admin_destroy_user_path(user), method: :delete, data: { confirm: "Are you sure you want to destroy #{user.email}? This action cannot be reversed" } %></td>
 				    <td><%= link_to "Edit User", users_edit_path(user), method: :get %></td>
 				    <td><%=user.admin%></td>
