--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
 <h1>User List</h1>
 	<form>
 	    <div>
-	        <input id="search" type="search" placeholder="Search" />
+	        <input class="form-control" id="search" type="search" placeholder="Search" />
 	    </div>
 	</form>
 	<div class="table-pager">Show
 	    <select class="pagesize">
 	        <option selected="selected" value="20">20</option>
 	        <option value="50">50</option>
-	    </select>entries | <span class="pagedisplay"></span> |
+	    </select> entries | <span class="pagedisplay"></span> |
 	    <button type="button" class="btn prev">&larr;</button>
 	    <button type="button" class="btn next">&rarr;</button>
 	</div>
