--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,29 +4,36 @@
     <title>Warmup</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application'%>
   </head>
 
   <body class="container">
-  	<%if current_user%>
-	<nav class="navbar navbar-default">
-	    <ul class="nav navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" href="<%= users_index_path%>">User Index</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="<%= users_new_path %>">New User</a>
-	      </li>
-	    </ul>
+  	<div class="row">
+	  	<%if current_user%>
+			<nav class="navbar navbar-inverse bg-inverse">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<% if current_user.admin? %>
+				    <ul class="nav navbar-nav">
+				      <li class="nav-item">
+				        <a class="nav-link" href="<%= users_index_path%>">User Index</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="<%= users_new_path %>">New User</a>
+				      </li>
+				    </ul>
+				    <% end %>
 
-	     <ul class="nav navbar-nav navbar-right">
-	     	<li class="nav-item">
-	     		<%= link_to "Logout", destroy_user_session_path, method: :delete %>
-	      	</li>
-	     </ul>
-	</nav>
-	<%end%>
+				    <ul class="nav navbar-nav navbar-right">
+				     	<li>
+				     		<%= link_to "Logout", destroy_user_session_path, method: :delete%>
+				     	</li>
+				     </ul>
+				     
+			 	</div>
+			</nav>
+		<%end%>
+	</div>
 
 
   	<% if !flash.empty? %>
